# JUCECODEBASE2

JUCE_UPLOAD/: CMakeLists.txt  README.md
JUCE_UPLOAD/Resources/ReferenceCode/: ChordDisplay.tsx  KeySelector.tsx  PlusMinusBar.tsx
JUCE_UPLOAD/Resources/ReferenceCode/utils/: audio-utils.ts  chord-utils.ts  colors.ts  midi-utils.ts  nanoid.ts
JUCE_UPLOAD/Source/: CustomLookAndFeel.h  IconButton.h  Main.cpp  MainComponent.cpp  MainComponent.h  PianoKeyComponent.cpp  PianoKeyComponent.h  SettingsPanelXLComponent.cpp  SettingsPanelXLComponent.h  TitleComponent.cpp  TitleComponent.h  VerticalFaderComponent.cpp  VerticalFaderComponent.h
REFERENCE_IMPLEMENTATION/: README.md
REFERENCE_IMPLEMENTATION/ReferenceCode/: BassOffsetButton.tsx  EyeButton.tsx  InstrumentSelector.tsx  PianoXL.tsx  SettingsPanelXL.tsx
REFERENCE_IMPLEMENTATION/ReferenceCode/utils/: bass-offset-config.ts  music-utils.ts  music.ts
